# ESP32-A2DP

./: .gitignore  BluetoothA2DPCommon.h  CMakeLists.txt  Doxyfile  LICENSE  README.md  esp32_bt_music_receiver.cpp  esp32_bt_music_receiver.h  keywords.txt  library.properties
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Issue-report.yml
.github/workflows/: compile-examples.yml
doc/html/: _bluetooth_a2_d_p_common_8h_source.html  _bluetooth_a2_d_p_sink_8h_source.html  _bluetooth_a2_d_p_source_8h_source.html  _sound_data_8h_source.html  annotated.html  class_bluetooth_a2_d_p_sink-members.html  class_bluetooth_a2_d_p_sink.html  class_bluetooth_a2_d_p_sink_callbacks-members.html  class_bluetooth_a2_d_p_sink_callbacks.html  class_bluetooth_a2_d_p_source.html  class_one_channel_sound_data-members.html  class_one_channel_sound_data.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  menudata.js  structapp__msg__t.html  structbt__app__msg__t-members.html  structbt__app__msg__t.html
docs/html/: _a2_d_p_volume_control_8h_source.html  _bluetooth_a2_d_p_8h.html  _bluetooth_a2_d_p_8h_source.html  _sound_data_8h_source.html  (+132 more)
src/: A2DPVolumeControl.h  BluetoothA2DP.h  BluetoothA2DPCommon.cpp  BluetoothA2DPCommon.h  BluetoothA2DPOutput.cpp  BluetoothA2DPOutput.h  BluetoothA2DPSink.cpp  BluetoothA2DPSink.h  BluetoothA2DPSinkQueued.cpp  BluetoothA2DPSinkQueued.h  BluetoothA2DPSource.cpp  BluetoothA2DPSource.h  BluetoothOutput.cpp  BluetoothOutput.h  SPDIFOut.cpp  SPDIFOut.h  SoundData.cpp  SoundData.h  VolumeControl.h  config.h
(+175 files in other folders)
